restrict horizontal scrolling, fixes #66

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -10,6 +10,9 @@ html
   min-height: 100%
   min-width: 200px
 
+  @media screen and (max-width: $break-small)
+    overflow-x: hidden
+
 body
   background-color: #{"{{ theme.background_color }}"}
   background-image: #{"{% if theme.background_image != blank %} url({{ theme.background_image.url }}) {% else %} none {% endif %}"}
